Basic XML config options